- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "tikz-cd.doc.tar.xz": 7023edd3bb4e2b8b0dec7083dcea97d7c959efcb
-  "tikz-cd.tar.xz": 50e4c96a0dbe20b2b84493776e9cd714f36ebf90
+  tikz-cd.doc.tar.xz: dcc92ad241e6658be319a379dee7d297b9b839f8
+  tikz-cd.tar.xz: 979b300a203956635f29bff6a307f120dc8d52c7
