--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  tikz-cd.doc.tar.xz: 599bee796267a7fa4cad73c3311fde50d3f871f2
-  tikz-cd.tar.xz: d1d18d63b7231ee3c0910b419b0717b52591df82
+  tikz-cd.doc.r59133.tar.xz: d80065cfbab6b5418fc457f4ecd30538f18556fb
+  tikz-cd.r59133.tar.xz: 92d82059c9c17ca3df85781a8c954768ed331766
